Fix servers view mobile truncated text exceeding parent, Add basic server-statis-listener,

--- a/public/css/public/app-rtl.css
+++ b/public/css/public/app-rtl.css
@@ -15186,6 +15186,10 @@ textarea.form-control-lg {
   background-color: rgba(33, 37, 41, 0.1);
 }
 
+.min-width-0 {
+  min-width: 0;
+}
+
 .bg-center {
   background-position: center;
 }
