--- a/resources/scss/public/app.scss
+++ b/resources/scss/public/app.scss
@@ -45,6 +45,10 @@ $spacers: map-merge(
     }
 }
 
+.min-width-0 {
+    min-width: 0;
+}
+
 .bg-center {
     background-position: center;
 }
